--- a/html/playerDatabaseHelper.html
+++ b/html/playerDatabaseHelper.html
@@ -5,52 +5,49 @@
     </head>
     <body>
         <div>
-            Playername: <input type="text" id="playername"><br>
-            Title: <input type="text" id="title"><br>
-            Competition: <input type="text" id="competition"><br>
-            Placement: <input type="text" id="placement">
-            <br><br><br><br>
             <button id="import">Import</button><button id="export">Export</button><br>
             <textarea id="io"></textarea>
+            <br><br><br><br>
+            <table>
+                <tbody id="tb">
+
+                </tbody>
+            </table>
         </div>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script>
             let playerDB = {}
+            let rows = [];
 
             $('#import').on("click", () => {
                 playerDB = JSON.parse($('#io').val());
+                updateTable();
             });
 
             $('#export').on('click', () => {
+                updatePlayerDB();
                 $('#io').val(JSON.stringify(playerDB));
             });
 
-            $(document).on("keydown", (evt) => {
-                if(evt.originalEvent.code == "Enter") {
-
-                    if(playerDB[$('#playername').val()] === undefined) {
-                        playerDB[$('#playername').val()] = {
-                            "discordId": "",
-                            "title": "",
-                            "competitions": []
-                        }
+            function updateTable() {
+                rows = [];
+                Object.keys(playerDB).forEach(e => {
+                    if(playerDB[e].discordId === "") {
+                        rows.push(e);
+                        let row = $('<tr></tr>');
+                        row.append($('<td>' + e + '</td>'));
+                        row.append($('<td><input type="text" id="dID_' + e.replace(" ", "") + '""></td>'));
+                        $('#tb').append(row);
                     }
+                });
+            }
 
-                    if($('#title').val() !== "") {
-                        playerDB[$('#playername').val()].title = $('#title').val();
-                    }
-
-                    if($('#competition').val() !== "") {
-                        playerDB[$('#playername').val()].competitions.push({"competition": $('#competition').val(), "placement": $('#placement').val()});
-                    }
-
-                    $('#playername').val("").focus();
-                    $('#title').val("");
-                    $('#placement').val("");
-
-                }
-            });
+            function updatePlayerDB() {
+                rows.forEach(e => {
+                    playerDB[e].discordId = $('#dID_' + e.replace(" ", "")).val()
+                });
+            }
         </script>
     </body>
 </html>
