--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -13,7 +13,7 @@
         </div>
         <div class="ui relaxed centered grid">
             <div class="row">
-                <div class="two wide column"><img class="ui circular image" id="avatar"></div>
+                <div class="two wide column"><img class="ui large centered circular image" id="avatar"></div>
             </div>
             <div class="row">
                 <div class="six wide column"><h1 class="ui center aligned header" id="name" style="font-weight: bold; font-size: 3rem;"></h1></div>
