--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         <title>RR Player Statistics</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.css">
         <link rel="stylesheet" href="darkly.css">
         <style>
             .background {
@@ -38,7 +38,7 @@
         <div style="bottom: 5px; width: 100%; text-align: center; font-style: italic; position: absolute; color: lightgray; margin-top: 10px;">Made with precision german engineering.</div>
 
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.8.7/dist/semantic.min.js"></script>
         <script src="/allPlayers.js"></script>
         <script>
             $('.ui.search').search({
