Finished competitions editor

--- a/html/backend/index.html
+++ b/html/backend/index.html
@@ -9,7 +9,7 @@
             <br>
             <div id="messages" style="z-index: 1;"></div>
             <h1 class="ui header">RR Player Stats - Backend</h1>
-            <button class="negative ui right floated button"><i class="sign out alternative icon"></i>Logout</button>
+            <a class="negative ui right floated button"><i class="sign out alternative icon"></i>Logout</a>
             <br>
             <br>
             <br>
@@ -29,7 +29,7 @@
                 </div>
                 <div class="item">
                     <div class="right floated content">
-                        <button class="ui button" href="/backend/competitons"><i class="share icon"></i></button>
+                        <a class="ui button" href="/backend/competitions"><i class="share icon"></i></a>
                     </div>
                     <div class="content">
                         <a class="header" style="font-weight: bold;">Competitions</a>
