*Some* tidying up

--- a/html/backend/index.html
+++ b/html/backend/index.html
@@ -9,7 +9,7 @@
             <br>
             <div id="messages" style="z-index: 1;"></div>
             <h1 class="ui header">RR Player Stats - Backend</h1>
-            <a class="negative ui right floated button"><i class="sign out alternative icon"></i>Logout</a>
+            <a class="negative ui right floated button" href="/backend/logout"><i class="sign out alternative icon"></i>Logout</a>
             <br>
             <br>
             <br>
