Gave competitions it's deserved icon

--- a/html/backend/index.html
+++ b/html/backend/index.html
@@ -31,6 +31,7 @@
                     <div class="right floated content">
                         <a class="ui button" href="/backend/competitions"><i class="share icon"></i></a>
                     </div>
+                    <i class="large edit middle aligned icon"></i>
                     <div class="content">
                         <a class="header" style="font-weight: bold;">Competitions</a>
                         <div class="description">Lists all the matches of a competition.</div>
