Fixed issue with player search + loading new match

--- a/html/playerpage.html
+++ b/html/playerpage.html
@@ -212,7 +212,7 @@
                     }
 
                     if($(row2).attr("rival").toLowerCase().search($('#rivalSearch').val().toLowerCase()) === -1) {
-                        row.hide(0);
+                        row2.hide(0);
                     }
 
                     data.maps.slice(5).forEach(element => {
