--- a/html/backend/matchList.html
+++ b/html/backend/matchList.html
@@ -33,15 +33,15 @@
                             
                         </div>
                     </div>
-                    <div class="actions">
-                        <div class="ui red basic cancel inverted button">
-                            <i class="remove icon"></i>
-                            No
-                        </div>
-                        <div class="ui green ok inverted button" id="saveConfirm">
-                            <i class="checkmark icon"></i>
-                            Yes
-                        </div>
+                </div>
+                <div class="actions">
+                    <div class="ui red basic cancel inverted button">
+                        <i class="remove icon"></i>
+                        No
+                    </div>
+                    <div class="ui green ok inverted button" id="saveConfirm">
+                        <i class="checkmark icon"></i>
+                        Yes
                     </div>
                 </div>
             </div>
@@ -63,6 +63,7 @@
         <button class="ui right floated positive button" id="save"><i class="save icon"></i>Save</button>
         <table class="ui structured small celled table">
             <thead>
+                <th>#</th>
                 <th>Platform</th>
                 <th>Round</th>
                 <th>Match win</th>
@@ -181,6 +182,7 @@
                 for (let index = 0; index < amountRows; index++) {
                     rows.push($('<tr></tr>'));
                 }
+                rows[0].append($("<td></td>").attr("rowspan", amountRows).text(idx));
                 rows[0].append($("<td></td>").attr("rowspan", amountRows).append($("<input type='text' value='" + match.platform + "'>").attr("id", idx + ".platform")));
                 rows[0].append($("<td></td>").attr("rowspan", amountRows).append($("<input type='text' value='" + match.round + "'>").attr("id", idx + ".round")));
 
