Added competition import, cleaned up

--- a/html/backend/index.html
+++ b/html/backend/index.html
@@ -65,7 +65,16 @@
                         <div class="description">Lists all the players.</div>
                     </div>
                 </div>
-
+                <div class="item">
+                    <div class="right floated content">
+                        <a class="ui button" href="/backend/importSpreadsheet"><i class="share icon"></i></a>
+                    </div>
+                    <i class="large file import middle aligned icon"></i>
+                    <div class="content">
+                        <a class="header" style="font-weight: bold;">Import spreadsheet</a>
+                        <div class="description">Imports a spreadsheet as a permament part of the system.</div>
+                    </div>
+                </div>
                 <div class="item">
                     <div class="right floated content">
                         <button class="ui button" id="reload"><i class="upload icon"></i></button>
