Added bulk-standings importer

--- a/html/backend/competitionImport.html
+++ b/html/backend/competitionImport.html
@@ -56,7 +56,7 @@
             </div>
             <div class="ui basic segment" id="step3_content" hidden>
                 Competition <span id="title"></span> imported with <span id="amountMatches"></span> matches.<br>
-                You can now optionally go and <a href="#">add standings in bulk</a>.
+                You can now optionally go and <a href="/backend/importStandings">add standings in bulk</a>.
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
