--- a/html/backend/index.html
+++ b/html/backend/index.html
@@ -77,6 +77,16 @@
                 </div>
                 <div class="item">
                     <div class="right floated content">
+                        <a class="ui button" href="/backend/importStandings"><i class="share icon"></i></a>
+                    </div>
+                    <i class="large file import middle aligned icon"></i>
+                    <div class="content">
+                        <a class="header" style="font-weight: bold;">Bulk import standings</a>
+                        <div class="description">Imports standings and adds them to the corresponding players.</div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="right floated content">
                         <button class="ui button" id="reload"><i class="upload icon"></i></button>
                     </div>
                     <i class="large upload middle aligned icon"></i>
