--- a/html/backend/matchList.html
+++ b/html/backend/matchList.html
@@ -52,6 +52,7 @@
             <br><br>
             <select class="ui selection dropdown" id="competition">
                 <option value="">Competition</option>
+                <option value="RR5">Roulette Rivals 5</option>
                 <option value="RR4">Roulette Rivals 4</option>
                 <option value="RRWC">Roulette Rivals World Championship</option>
                 <option value="RR3">Roulette Rivals 3</option>
